--- a/docker-composer.yml
+++ b/docker-composer.yml
@@ -3,7 +3,7 @@ services:
     build: .
     container_name: mercatorio_api
     ports:
-      - "8001:8000"
+      - "8000:8000"
     volumes:
       - .:/app
       - ./uploads:/app/uploads
@@ -12,6 +12,20 @@ services:
     env_file:
       - .env
     restart: always
+
+  api_mock:
+    build: .
+    container_name: mercatorio_api_mock
+    ports:
+      - "8001:8000"
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    depends_on:
+      - db
+    restart: always
+    command: uvicorn app.infrastructure.services.certidao_api_mock:app --host 0.0.0.0 --port 8000 --reload
 
   db:
     image: postgres:14
